// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddPlaylistForm > matches the snapshot 1`] = `
"<form novalidate="">
  <div class="fields">
    <div class="inputField"><label class="label" for="name">name <span class="required">*</span></label><input id="name" type="text" autocomplete="off" required="" placeholder="Enter radio station name" class="input" value="">
      <!--v-if-->
    </div>
  </div><button class="submitButton button" type="submit"><span class="content"> Add playlist <!--v-if--></span></button>
</form>"
`;

exports[`AddPlaylistForm > when form is valid > matches the snapshot 1`] = `
"<form novalidate="">
  <div class="fields">
    <div class="inputField"><label class="label" for="name">name <span class="required">*</span></label><input id="name" type="text" autocomplete="off" required="" placeholder="Enter radio station name" class="input" value="Playlist">
      <!--v-if-->
    </div>
  </div><button type="submit" class="submitButton disabled button" disabled=""><span class="content"> Add playlist <span class="loader"><span class="loader"></span><span class="visually-hidden">Loading data</span></span></span></button>
</form>"
`;

exports[`AddRadioStationForm > matches the snapshot 1`] = `
"<form novalidate="">
  <div class="fields">
    <div class="inputField field"><label class="label" for="name">name <span class="required">*</span></label><input id="name" type="text" autocomplete="off" required="" placeholder="Enter radio station name" class="input" value="">
      <!--v-if-->
    </div>
    <div class="inputField field"><label class="label" for="streamUrl">stream Url <span class="required">*</span></label><input id="streamUrl" type="text" autocomplete="off" required="" placeholder="Enter radio station stream URL" class="input" value="">
      <!--v-if-->
    </div>
    <div class="inputField field"><label class="label" for="homepageUrl">homepage Url
        <!--v-if-->
      </label><input id="homepageUrl" type="text" autocomplete="off" placeholder="Enter radio station homepage URL" class="input" value="">
      <!--v-if-->
    </div>
  </div><button class="submitButton button" type="submit"><span class="content"> Add Radio Station <!--v-if--></span></button>
</form>"
`;

exports[`AddRadioStationForm > when form is valid > matches the snapshot 1`] = `
"<form novalidate="">
  <div class="fields">
    <div class="inputField field"><label class="label" for="name">name <span class="required">*</span></label><input id="name" type="text" autocomplete="off" required="" placeholder="Enter radio station name" class="input" value="name">
      <!--v-if-->
    </div>
    <div class="inputField field"><label class="label" for="streamUrl">stream Url <span class="required">*</span></label><input id="streamUrl" type="text" autocomplete="off" required="" placeholder="Enter radio station stream URL" class="input" value="https://www.test.com">
      <!--v-if-->
    </div>
    <div class="inputField field"><label class="label" for="homepageUrl">homepage Url
        <!--v-if-->
      </label><input id="homepageUrl" type="text" autocomplete="off" placeholder="Enter radio station homepage URL" class="input" value="">
      <!--v-if-->
    </div>
  </div><button type="submit" class="submitButton disabled button" disabled=""><span class="content"> Add Radio Station <span class="loader"><span class="loader"></span><span class="visually-hidden">Loading data</span></span></span></button>
</form>"
`;
